--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^12.0.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0"
