--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SumanIslam/OAuthWithPassport.js#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^12.0.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
